--- a/scss/base/_global.css.scss
+++ b/scss/base/_global.css.scss
@@ -46,7 +46,7 @@ header#page_header {
       padding-left: 100px;
       position: relative;
         top: 0;
-        left: 50px;
+        left: 10px;
     }
 
     h1 {
@@ -88,7 +88,13 @@ header#page_header {
       float: none;
       font-size: 70%;
       margin: -1em -1.2em 0 -1.5em;
-      width: 110%;
+      width: 115%;
+    }
+
+    label {
+      @include respond-to(smartphone) {
+        display: none;
+      }
     }
   } // section#search
 
@@ -109,7 +115,7 @@ header#page_header {
       margin: 0 -1.5em;
       padding: 0;
       position: relative;
-      width: 110%;
+      width: 115%;
     }
 
     ul {
@@ -138,7 +144,7 @@ header#page_header {
           height: 50px;
           padding: 15px 10px 0 10px;
           text-align: left;
-          width: 100%;
+          width: 110%;
         }
 
         a {
@@ -156,7 +162,7 @@ header#page_header {
           @include respond-to(smartphone) {
             background-position: 0 0;
             height: 50px;
-            padding: 15px 200px 15px 50px;
+            padding: 15px 100px 15px 50px;
             width: 100%;
           }
 
